[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/PlayerCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/city.png" type="Texture" id=2]
[ext_resource path="res://MainGame/ParallaxBackground.gd" type="Script" id=3]
[ext_resource path="res://assets/Courier Prime.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/GOODBOY.png" type="Texture" id=6]
[ext_resource path="res://assets/Bridgelit.png" type="Texture" id=7]
[ext_resource path="res://GUI/Instruction/Instruction_Minigame.gd" type="Script" id=8]
[ext_resource path="res://Minigame/Minigame.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="MainGame" type="Node"]
script = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 6, 1 )
motion_mirroring = Vector2( 1976, 0 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 988, 397 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 1976, 794 )

[node name="CityLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.75, 0 )
motion_mirroring = Vector2( 4096, 0 )

[node name="CityBackground" type="Sprite" parent="ParallaxBackground/CityLayer"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 4096, 176 )

[node name="PlayerCharacter" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, 480 )

[node name="Minigame" parent="." instance=ExtResource( 9 )]
z_index = 10

[node name="HUD" parent="." instance=ExtResource( 5 )]
position = Vector2( 1088, 0 )
z_index = 2

[node name="HUD2" type="Label" parent="."]
margin_left = -64.0
margin_top = 280.0
margin_right = 356.0
margin_bottom = 424.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
text = "Reload by matching the 
color symbols in the bottom right corner


Start from the white center and match from
inner ring to outer ring
Each refill gives 5 ammo for that type"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
margin_left = 496.0
margin_top = 568.0
margin_right = 1496.0
margin_bottom = 1368.0
rect_scale = Vector2( 0.260925, 0.294193 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="."]
margin_left = 40.0
margin_top = 560.0
margin_right = 1040.0
margin_bottom = 1360.0
rect_scale = Vector2( 0.260925, 0.294193 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="."]
margin_left = 832.0
margin_top = 568.0
margin_right = 1832.0
margin_bottom = 1368.0
rect_scale = Vector2( 0.260925, 0.294193 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
